# CardsGame_Client

./: .clangd  .gitignore  CMakeLists.txt  card.cpp  card.h  cards.qrc  chat.cpp  chatcompleter.cpp  console.cpp  deck.cpp  deck.h  functions.cpp  functions.h  joindialog.cpp  joindialog.h  joindialog.ui  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  network.cpp  network.h  protocol.cpp  protocol.h  rejoindialog.cpp  rejoindialog.h  rejoindialog.ui  serverlist.cpp  string_func.cpp  string_func.h
src/: main.cpp
src/other/: network.cpp  network.h  stringfunc.cpp  stringfunc.h
src/protocol/: card.cpp  card.h  cardcontainer.cpp  cardcontainer.h  deck.cpp  deck.h  functions.cpp  functions.h  players.cpp  players.h  protocol.cpp  protocol.h  table.h
src/ui/: cardframe.cpp  cardframe.h  chat.cpp  chatcompleter.h  console.cpp  formlineedit.cpp  formlineedit.h  joindialog.cpp  joindialog.h  mainwindow.cpp  mainwindow.h  rejoindialog.cpp  rejoindialog.h  serverlist.cpp
ui/: joindialog.ui  mainwindow.ui  rejoindialog.ui
